<resources>
    <string name="app_name">SNSLogin</string>
    <string name="btnKakao">카카오 USER</string>
    <string name="btnFacebook">페이스북 USER</string>

    <string name="btnKakaoRequestUserInfo">카카오 사용자 정보 요청</string>
    <string name="btnKakaoSaveUserInfo">카카오 사용자 정보 저장</string>
    <string name="btnKakaoConnectApp">카카오 앱 연결</string>
    <string name="btnKakaoDisconnectApp">카카오 앱 연결 해제</string>
    <string name="btnKakaoLogin">카카오 로그인</string>
    <string name="btnKakaoLogout">카카오 로그아웃</string>
</resources>
